src/objects/Sprint__c.object
<CustomObject>
    <description>TOOLKIT - an object to store Sprints related to a Release.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CPQ_Sprints</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CPQ</value>
        </filters>
        <label>CPQ Sprints</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EDU_Ticketing_System_Sprints</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>EDU TS</value>
        </filters>
        <label>EDU TS - Sprints</label>
    </listViews>
    <listViews>
        <fullName>EEC_Sprints</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>EEC</value>
        </filters>
        <label>EEC - Sprints</label>
        <sharedTo>
            <group>CoE_PT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NGOEP</fullName>
        <columns>NAME</columns>
        <columns>Release__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NGOEP</value>
        </filters>
        <label>NGOEP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PRM_Sprints</fullName>
        <columns>NAME</columns>
        <columns>Release__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>PRM</value>
        </filters>
        <label>PRM Sprints</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SCRM_Sprints</fullName>
        <columns>NAME</columns>
        <columns>Release__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>CRM</value>
        </filters>
        <label>SCRM Sprints</label>
    </listViews>
    <listViews>
        <fullName>smartCPQ_Sprints</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>sCPQ</value>
        </filters>
        <label>smartCPQ Sprints</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>